[package]
name = "qst-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tonic = "0.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["full"] }
xlog-rs = "0.1.0"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
